# icon-HV

iCON_HV_FirmwareV1/: .cproject  .project  partitions.csv  sdkconfig  sdkconfig.old
iCON_HV_FirmwareV1/components/Relay_Control/: CMakeLists.txt  Relay_Control.c
iCON_HV_FirmwareV1/components/Relay_Control/include/: Relay_Control.h
iCON_HV_FirmwareV1/components/Server_buffer/: CMakeLists.txt  Server_buffer.c
iCON_HV_FirmwareV1/components/Server_buffer/include/: Server_buffer.h
iCON_HV_FirmwareV1/components/ble_server/: CMakeLists.txt
iCON_HV_FirmwareV1/components/ble_server/include/: ble_server.h
iCON_HV_FirmwareV1/components/ble_server/src/: ble_server.c
iCON_HV_FirmwareV1/components/calibration/: CMakeLists.txt  calibration.c  calibration.h
iCON_HV_FirmwareV1/components/esp32s2_fatal_err/: CMakeLists.txt  esp32s2_fatal_err.c
iCON_HV_FirmwareV1/components/esp32s2_i2c_protocol/: CMakeLists.txt  esp32s2_i2c_protocol.c
iCON_HV_FirmwareV1/components/esp32s2_i2c_protocol/include/: esp32s2_i2c_protocol.h
iCON_HV_FirmwareV1/components/esp32s2_pac1952/: CMakeLists.txt  esp32s2_pac1952.c
iCON_HV_FirmwareV1/components/gpio_control/: CMakeLists.txt  gpio_control.c
iCON_HV_FirmwareV1/components/ota/: CMakeLists.txt  ota.c
iCON_HV_FirmwareV1/components/ota/include/: ota.h
iCON_HV_FirmwareV1/components/samples_read/: CMakeLists.txt  samples_read.c
iCON_HV_FirmwareV1/components/switch_detector/: CMakeLists.txt  switch_detector.c
iCON_HV_FirmwareV1/components/wifi_mqtt/: CMakeLists.txt  wifi_mqtt.c
iCON_HV_FirmwareV1/main/: CMakeLists.txt  main.c
(+5 files in other folders)
